package org.yyb.visitor;

public abstract class Action {

    public abstract void getManResult(Man man);

    public abstract void getWomanResult(Woman man);
}
