package org.yyb.visitor;

public abstract class Person {
    public abstract void accept(Action action);
}
